--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital@1&display=swap');
-
+*{
+  margin: 0;
+}
 body{
     background-color: rgb(4, 12, 12);
 
@@ -9,7 +11,6 @@ body{
 img {
     width: 500px;
     border-radius: 9px;
-    margin-left: 29%;
     margin-top: 3%;
     border-style: groove;
     border-color: aqua;
@@ -19,7 +20,7 @@ img {
 .navbar {
     background-color: transparent;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 10px 20px;
   }
@@ -33,8 +34,27 @@ img {
   .navbar a:hover {
     background-color: rgba(255, 255, 255, 0.1);
   }
-
+  @keyframes text-pop-up-top {
+    0% {
+      transform: translateY(0);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(-20px);
+      opacity: 1;
+    }
+  }
   
+  
+  .text-pop-up-top {
+    padding: 40px;
+    -webkit-animation: text-pop-up-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both infinite;
+    animation: text-pop-up-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both infinite;
+  }
+
+
+
+
 h1{
     text-align: center;
     font-size: xx-large;
@@ -56,6 +76,8 @@ p{
     text-align: center;
     font-weight: bold;
     color: rgb(176, 169, 168);
+    
+
 }
 ol{
     font-size: 20px;
@@ -71,16 +93,21 @@ ol{
     flex: 1;
     display: flex;
     justify-content: flex-end;
+    
   }
   
   .about-image img {
     max-width: 100%; 
     height: auto; 
+    -webkit-box-shadow:0px 0px 215px 10px rgba(45,255,196,0.9);
+-moz-box-shadow: 0px 0px 215px 10px rgba(45,255,196,0.9);
+box-shadow: 0px 0px 215px 10px rgba(45,255,196,0.9);
   }
   
   .about-content {
     flex: 1;
-    margin-left: 30px; }
+    margin-left: 30px; 
+  }
   
   .about-content p {
     font-size: 30px;
@@ -91,32 +118,64 @@ ol{
     list-style: none;
     display: flex;
     flex-direction: column; 
-    align-items: flex-start; 
+    align-items: center; 
   }
   
   .hobby-item {
     display: flex;
-    align-items: center;
-    margin-bottom: 20px; 
+    flex-direction:column ;
+
+    margin-bottom: 30px; 
+  }
+  .hobby-item img:hover{
+    transform: rotate(360deg);
+    border-radius: 9px;
+    border-style: groove;
+    border-color: aqua;
   }
   
   .hobby-item img {
     width: auto; 
     height: auto; 
-    border-radius: 9px;
-    border-style: groove;
-    border-color: aqua;
-    margin-right: 20px; 
+    padding: 15px; 
+    transition: transform 0.3s;
+  transform-origin: center center;
+  }
+  .hobby-item p {
+    font-weight: bold;
+    font-size: 16px;
+    margin: 10px 0;
+    color: #c6c3c3;
+    transition: color 0.3s, font-size 0.3s;
+  }
+
+  .hobby-item:hover p {
+    color: #f9f76a;
+    font-size: 18px; 
   }
   
-  .hobby-item p {
-    font-size: 18px;
-    color: rgb(249, 246, 246);
+  @keyframes heartbeat {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.2);
+    }
+    100% {
+      transform: scale(1);
+    }
   }
   
   .section-heading {
     font-size: 55px;
     text-align: center;
+    animation: heartbeat 1.5s ease-in-out infinite both;
+    padding-bottom: 40px;
+  }
+
+  #Acheivements ,#Goals{
+    padding: 40px;
+    padding-top: 120px;
   }
   .achievements-list {
     list-style: none;
@@ -174,4 +233,34 @@ ol{
     transform: translateY(-50%);
     left: 0;
   }
-  
+  footer {
+    background-color: black;
+    color: white;
+    margin-top: 100px;
+    padding: 0px 66px;
+    text-align:right;
+    display: flex;
+    justify-content: space-between;
+}
+#pic{
+    border-radius: 50%;
+    width: 160px;
+    background-color: aliceblue;
+    height:160px;
+    background-image: url(Pic.png);
+    background-size: 100% 100%;
+    margin: 15px;
+}
+.text{
+  padding-top: 80px;
+}
+#Footertext{
+    color: white;
+    font-size: 20px;
+    font-weight: lighter;
+    font-family: 'Poppins', sans-serif;
+}
+
+.Hobbies{
+  text-align: center;
+}
