--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body{
     background-color: rgb(4, 12, 12);
 
     font-family: 'Noto Sans', sans-serif;
+    overflow-x: hidden;
 }
 
 img {
@@ -65,6 +66,7 @@ h2{
     color: tomato;
     font-size: 45px;
 }
+
 h3{
     text-align: center;
     font-weight: bolder;
@@ -92,7 +94,7 @@ ol{
   .about-image {
     flex: 1;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     
   }
   
@@ -112,6 +114,9 @@ box-shadow: 0px 0px 215px 10px rgba(45,255,196,0.9);
   .about-content p {
     font-size: 30px;
     color: rgb(249, 246, 246);
+  }
+  #Hobbies h2 {
+    padding: 60px;
   }
   
   .hobbies-list {
@@ -175,7 +180,7 @@ box-shadow: 0px 0px 215px 10px rgba(45,255,196,0.9);
 
   #Acheivements ,#Goals{
     padding: 40px;
-    padding-top: 120px;
+    padding-top: 70px;
   }
   .achievements-list {
     list-style: none;
@@ -261,6 +266,21 @@ box-shadow: 0px 0px 215px 10px rgba(45,255,196,0.9);
     font-family: 'Poppins', sans-serif;
 }
 
-.Hobbies{
+#Hobbies{
   text-align: center;
+}
+.media{
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+.media a{
+  padding: 15px 30px;
+}
+.media img{
+  width: 40px;
+  /* height: 40px; */
+  padding: 2px ;
+  border: none;
+  background-color: white;
+
 }
